k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: m-path
  labels:
    app.kubernetes.io/name: m-path
