k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: m-path
  namespace: m-path
  labels:
    app.kubernetes.io/name: m-path
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: m-path
  ports:
    - name: http
      port: 80
      targetPort: http
